# amplifier-profiles

./: pyproject.toml
docs/: AGENTS_CONFIGURATION.md
src/amplifier_profiles/: agent_schema.py  compiler.py  merger.py  schema.py
tests/: test_agent_exclude_feature.py  test_merger.py  test_profile_schema.py
