[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-profiles"
version = "0.1.0"
description = "Profile and agent loading system for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Microsoft Amplifier Team"}
]
dependencies = [
    "amplifier-collections",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["amplifier_profiles*"]

[tool.setuptools.package-data]
amplifier_profiles = ["py.typed"]

[tool.uv.sources]
amplifier-collections = { git = "https://github.com/microsoft/amplifier-collections", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

